fix sign in checkbox alignment

--- a/src/components/SignInForm/index.scss
+++ b/src/components/SignInForm/index.scss
@@ -56,8 +56,8 @@
 
   /* checkbox custom Style */
   input[type="checkbox"] {
-    width: 1rem;
-    height: 1rem;
+    width: 1.3rem;
+    height: 1.3rem;
     color: #fff;
     border: solid 0.12rem #d1dbe3;
     border-radius: $borderRadius;
@@ -65,7 +65,6 @@
     outline: 0;
     cursor: pointer;
     margin-right: 0.5rem;
-    // margin-top: 0.7rem;
     transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 
     &::before {
@@ -73,7 +72,7 @@
       content: "";
       display: block;
       top: 2px;
-      left: 5px;
+      left: 6px;
       width: 8px;
       height: 14px;
       border-style: solid;
