--- a/src/components/SignUpForm/index.scss
+++ b/src/components/SignUpForm/index.scss
@@ -65,8 +65,8 @@
 
   /* checkbox custom Style */
   input[type="checkbox"] {
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1.3rem;
+    height: 1.3rem;
     color: #fff;
     border: solid 0.12rem #d1dbe3;
     border-radius: $borderRadius;
